--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css"
 </head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore sequi sapiente error beatae ipsa voluptate. Deleniti, voluptatibus? Praesentium veritatis distinctio rerum omnis dolorum! Placeat aliquam esse necessitatibus animi nisi modi.</p>
+    </div>
 </body>
 </html>
