--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore sequi sapiente error beatae ipsa voluptate. Deleniti, voluptatibus? Praesentium veritatis distinctio rerum omnis dolorum! Placeat aliquam esse necessitatibus animi nisi modi.</p>
     </div>
+    <div>
+        <h3>My second blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore sequi sapiente error beatae ipsa voluptate. Deleniti, voluptatibus? Praesentium veritatis distinctio rerum omnis dolorum! Placeat aliquam esse necessitatibus animi nisi modi.</p>
+    </div>
+    <div>
+        <h3>My third blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore sequi sapiente error beatae ipsa voluptate. Deleniti, voluptatibus? Praesentium veritatis distinctio rerum omnis dolorum! Placeat aliquam esse necessitatibus animi nisi modi.</p>
+    </div>
 </body>
 </html>
